--- a/examples/view-transitions/src/index.css
+++ b/examples/view-transitions/src/index.css
@@ -36,13 +36,13 @@
 }
 
 ::view-transition-old(content) {
-  /* animation: 500ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
-    500ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left; */
+  animation: 500ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
+    500ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
 }
 
 ::view-transition-new(content) {
-  /* animation: 500ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
-    500ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right; */
+  animation: 500ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
+    500ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
 }
 
 .image-list > div {
