--- a/examples/view-transitions/src/index.css
+++ b/examples/view-transitions/src/index.css
@@ -57,6 +57,10 @@
   contain: layout;
 }
 
+.image-list a.transitioning img {
+  view-transition-name: image-expand;
+}
+
 .image-detail img {
   max-width: 100%;
   view-transition-name: image-expand;
@@ -73,11 +77,11 @@
   width: fit-content;
 }
 
+.image-list a.transitioning p {
+  view-transition-name: image-title;
+}
+
 .image-detail h1 {
   view-transition-name: image-title;
   width: fit-content;
-}
-
-::view-transition-old(image-title),
-::view-transition-new(image-title) {
 }
